--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "retimeout",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "reset a timeout callback mutiple times",
   "main": "index.js",
   "scripts": {
@@ -11,6 +11,13 @@
     "callback",
     "timer"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/zealotds/retimeout.git"
+  },
+  "bugs": {
+    "url": "https://github.com/zealotds/retimeout/issues"
+  },
   "author": "clarkttfu@gmail.com",
   "license": "MIT",
   "devDependencies": {
